# Bartender

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: black.yml  conda-deployment.yml  python-app.yml
src/: Bartender.py  BartenderReport.py  BuildReport.py
src/Other/: downsample_test_data.sh  manual_install.txt
src/Reports/: BuildReport.py  experimental.Rmd  stock.Rmd
src/Utils/: BarcodeProcessor.py  Common.py  Experimental.py  FilePaths.py  Record.py  ReportTable.py  SampleRead.py  SetupManager.py  StandardBarcodeName.py  Stock.py
tests/: conftest.py  test_Experimental.py  test_FilePaths.py  test_Record.py  test_ReportTable.py  test_SetupManager.py  test_StandardBarcodeName.py  test_Stock.py  tests.sh
tests/data/: experimental_sample_input_sheet.csv  stock_sample_input_sheet.csv
tests/data/ete2/: downsample.sh  experimental_samplesheet.csv  experimental_samplesheet_run1.csv  experimental_samplesheet_run2.csv  experimental_samplesheet_run3.csv  stock_samplesheet.csv  stock_samplesheet_run1.csv  stock_samplesheet_run2.csv  stock_samplesheet_run4.csv
tests/data/experimental/: animal1_unknown_27_plasma_dna_barcode.csv  animal2_unknown_27_plasma_dna_barcode.csv  stock_barcodes_filtered.csv
tests/data/stock/: CD4_derived_TF_CD4_SHIVCTF_PolyN_T1_041123_1_barcode.csv  stock_barcodes_filtered.csv  (+4 more)
tests/end_to_end/: _test_ete2.py  ignore_test_ete2.py  test_ete2.py  test_simple.py
tests/unit/: test_Common.py  test_Experimental.py  test_Record.py  test_ReportTable.py  test_SetupManager.py  test_StandardBarcodeName.py
(+13 files in other folders)
