[project]
name = "Bartender"
version = "1.1.0"
description = "Finding barcodes in viruses"
readme = "README.md"
requires-python = ">=3.7"
#license = {file = "LICENSE"}

authors = [
  {name = "Alexander McFarland"}
]
maintainers = [
  {name = "Alexander McFarland"}
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
  "biopython",
  "numpy",
  "pandas"
]

[project.optional-dependencies]
dev = ["black"]
test = ["pytest", "pytest-cov"]

[project.urls]
"Homepage" = "https://github.com/agmcfarland/Bartender/"
"Bug Reports" = "https://github.com/agmcfarland/Bartender/issues"
"Source" = "https://github.com/agmcfarland/Bartender/"

[project.scripts]
Bartender = "Bartender:main"
BartenderReport = "BartenderReport:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"